@@ -1,25 +1,19 @@
 from django.utils.safestring import mark_safe
 from django.contrib.admin.widgets import ForeignKeyRawIdWidget
-from django.core.urlresolvers import reverse
 
-search_map = {}
-
-def register_object_search_page(app_label, object_name, url):
-    search_map['%s-%s' % (app_label, object_name)] = url
+from selvbetjening.core import ObjectWrapper
 
 class SAdminForeignKeyRawIdWidget(ForeignKeyRawIdWidget):
     """
     Modified version of the Django ForeignKeyRawIdWidget accepting an alternate url.
     """
     def __init__(self, rel, admin_site, attrs=None, using=None):
-        self.url = reverse(search_map['%s-%s' % (rel.to._meta.app_label, rel.to._meta.object_name.lower())])
 
-        super(SAdminForeignKeyRawIdWidget, self).__init__(rel, admin_site, attrs=attrs, using=using)
+        admin_site_mock = ObjectWrapper(admin_site)
+        admin_site_mock._registry = [rel.to]
+
+        super(SAdminForeignKeyRawIdWidget, self).__init__(rel, admin_site_mock, attrs=attrs, using=using)
 
     def render(self, name, value, attrs=None):
-        related_url = '../../../%s/%s/' % (self.rel.to._meta.app_label, self.rel.to._meta.object_name.lower())
 
-        output = super(SAdminForeignKeyRawIdWidget, self).render(name, value, attrs=attrs)
-        output = output.replace(related_url, self.url)
-
-        return mark_safe(output)
+        return super(SAdminForeignKeyRawIdWidget, self).render(name, value, attrs=attrs)
